# Huffman_coding

./: .gitignore  CMakeLists.txt  readme.md
src/: CMakeLists.txt  archiver.cpp
src/bit_stream/: bit_stream.cpp  bit_stream.h  ibit_stream.cpp  obit_stream.cpp  stream_buffer.cpp
src/coders/: decoder.cpp  decoder.h  encoder.cpp  encoder.h  encoder_common_files.h  trie.cpp  trie.h
src/heap/: heap.h
src/term_parser/: parser_common_files.h  parser_template.h  terminal_parser.cpp  terminal_parser.h
src/tests/: CMakeLists.txt  test.cpp
test_files/comparison_files/: input.txt  output.txt
test_files/test_IO/results/: __a_  __exists_
