add_executable(test test.cpp
        ../coders/trie.cpp
        ../bit_stream/bit_stream.cpp
        ../bit_stream/ibit_stream.cpp
        ../bit_stream/obit_stream.cpp
        ../coders/decoder.cpp
        ../coders/encoder.cpp
        ../term_parser/terminal_parser.cpp
        ../bit_stream/stream_buffer.cpp
        ../heap/heap.h
        ../heap/heap.cpp
        ../heap/heap.cpp
        ../term_parser/parser_template.h)
